# opengl-math-project

./: CMakeLists.txt  Dragon3DLight.cpp
Headers/: Quaternion.h
Sources/: Main.cpp  Quaternion.cpp
